[tool.poetry]
name = "cinna-bot"
version = "0.1.0"
description = ""
authors = ["unriellistic <unriellistic@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
disnake = "^2.8.1"
python-dotenv = "^1.0.0"
tinydb = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
